--- a/serverless.yml
+++ b/serverless.yml
@@ -16,6 +16,7 @@ provider:
   region: eu-central-1
   environment:
     tableName: notes
+    stripeSecretKey: ${env:STRIPE_SECRET_KEY}
   iamRoleStatements:
     - Effect: Allow
       Action:
